fix button loading

--- a/noagame/assets/css/control-pad.scss
+++ b/noagame/assets/css/control-pad.scss
@@ -31,30 +31,30 @@ $grid-padding: 8px;
 
   #jump {
     grid-area: jump;
-    background-image: url(../img/touch/jump.png);
+    background-image: url(img/touch/jump.png);
   }
   #left {
     grid-area: left;
-    background-image: url(../img/touch/left.png);
+    background-image: url(img/touch/left.png);
   }
   #down {
     grid-area: down;
-    background-image: url(../img/touch/down.png);
+    background-image: url(img/touch/down.png);
   }
   #right {
     grid-area: right;
-    background-image: url(../img/touch/right.png);
+    background-image: url(img/touch/right.png);
   }
   #up-right {
     grid-area: up-right;
-    background-image: url(../img/touch/up_right.png);
+    background-image: url(img/touch/up_right.png);
   }
   #up {
     grid-area: up;
-    background-image: url(../img/touch/up.png);
+    background-image: url(img/touch/up.png);
   }
   #up-left {
     grid-area: up-left;
-    background-image: url(../img/touch/up_left.png);
+    background-image: url(img/touch/up_left.png);
   }
 }
