--- a/noagame/assets/css/style.scss
+++ b/noagame/assets/css/style.scss
@@ -1,8 +1,17 @@
+@font-face {
+  font-family: "Minecraft";
+  src: url("font/Minecraft.ttf") format("truetype");
+  font-weight: 500;
+  font-style: normal;
+  font-display: swap;
+}
+
 body {
   background-color: white;
   margin: 0px;
   overflow: hidden;
   user-select: none;
+  //font-family: "Minecraft";
 }
 
 #crosshair {
