--- a/noagame/assets/css/hotbar.scss
+++ b/noagame/assets/css/hotbar.scss
@@ -19,11 +19,14 @@ $hotbar-scale: 3;
     position: absolute;
     top: -3px;
     left: -3px;
-    background-image: url(img/blocks/stone.png);
-    background-size: calc(16px * #{$hotbar-scale});
-    background-repeat: no-repeat;
-    background-position: center center;
     z-index: 998;
+
+    canvas {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+    }
   }
 
   #hotbar-selection {
