--- a/noagame/assets/css/hotbar.scss
+++ b/noagame/assets/css/hotbar.scss
@@ -26,6 +26,7 @@ $hotbar-scale: 3;
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
+      pointer-events: none;
     }
   }
 
