--- a/noagame/assets/css/menu.scss
+++ b/noagame/assets/css/menu.scss
@@ -1,6 +1,14 @@
 #menu {
   z-index: 9999;
   position: absolute;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+}
+
+#menu-container {
+  position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
