--- a/noagame/assets/css/backgrounds.scss
+++ b/noagame/assets/css/backgrounds.scss
@@ -2,4 +2,6 @@
   background-image: url("/img/blocks/dirt.png");
   background-repeat: repeat;
   background-size: 32px;
+  background-blend-mode: darken;
+  background-color: rgba(0, 0, 0, 0.1);
 }
