--- a/noagame/assets/css/backgrounds.scss
+++ b/noagame/assets/css/backgrounds.scss
@@ -1,5 +1,5 @@
 .bg-dirt {
-  background-image: url("/img/blocks/dirt.png");
+  background-image: url("img/blocks/dirt.png");
   background-repeat: repeat;
   background-size: 32px;
   background-blend-mode: darken;
