--- a/noagame/assets/css/menu.scss
+++ b/noagame/assets/css/menu.scss
@@ -7,9 +7,17 @@
   height: 100%;
 }
 
-#menu-container {
+.menu-container {
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+}
+
+[container] {
+  display: none;
+
+  &[opened] {
+    display: block;
+  }
 }
