--- a/noagame/assets/css/button.scss
+++ b/noagame/assets/css/button.scss
@@ -16,6 +16,8 @@
   justify-content: center;
   color: white;
   font-size: calc(20px * var(--button-scale) / 2);
+  margin-left: auto;
+  margin-right: auto;
 
   &.disabled {
     background-image: url(img/gui/button_disabled.svg);
@@ -26,5 +28,12 @@
 
   &:not(:last-child) {
     margin-bottom: 4px;
+  }
+
+  &.first {
+    margin-bottom: 18px;
+  }
+  &.last {
+    margin-top: 18px;
   }
 }
