--- a/noagame/assets/css/menu.scss
+++ b/noagame/assets/css/menu.scss
@@ -5,6 +5,24 @@
   left: 0px;
   width: 100%;
   height: 100%;
+
+  &.scrollable {
+    overflow-y: auto;
+    scrollbar-width: none;
+
+    &::-webkit-scrollbar {
+      display: none;
+    }
+
+    .menu-container {
+      padding-top: 16px;
+      padding-bottom: 32px;
+      width: 60%;
+      top: 0;
+      left: 50%;
+      transform: translate(-50%);
+    }
+  }
 }
 
 .menu-container {
