--- a/noagame/assets/css/inventory.scss
+++ b/noagame/assets/css/inventory.scss
@@ -1,30 +1,121 @@
-#blocks {
-  z-index: 999;
+$inv-width: 176px;
+$inv-height: 166px;
+$inv-scale: calc(var(--button-scale) * 1.5);
+
+$inv-startx: calc(8px * #{$inv-scale});
+$inv-starty: calc(84px * #{$inv-scale});
+$inv-padding: calc(2px * #{$inv-scale});
+$inv-slot-size: calc(16px * #{$inv-scale});
+
+.inventory {
   position: absolute;
-  top: 50%;
   left: 50%;
+  top: 50%;
   transform: translate(-50%, -50%);
-  width: 75%;
-  height: 80%;
-  background-color: rgba(0, 0, 0, 0.8);
-  padding: 4px;
-}
+  z-index: 99999;
+  width: calc(#{$inv-width} * #{$inv-scale});
+  height: calc(#{$inv-height} * #{$inv-scale});
 
-.invblock {
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center center;
-  width: 40px;
-  height: 40px;
-  margin: 4px;
-  box-sizing: border-box;
-  cursor: pointer;
-  display: inline-block;
-
-  &:hover {
-    border: 2px solid white;
+  &#inventory {
+    background-image: url(img/gui/inventory.svg);
   }
-  &:active {
-    border: 1px solid white;
+
+  .inv-slot {
+    width: $inv-slot-size;
+    height: $inv-slot-size;
+    position: absolute;
+
+    @mixin slot($row, $ind) {
+      top: calc(#{$inv-starty} + ((#{$inv-padding} + #{$inv-slot-size}) * (#{$row} - 1)));
+      left: calc(#{$inv-startx} + ((#{$inv-padding} + #{$inv-slot-size}) * (#{$ind} - 1)));
+    }
+
+    &:nth-of-type(1) {
+      @include slot(1, 1);
+    }
+    &:nth-of-type(2) {
+      @include slot(1, 2);
+    }
+    &:nth-of-type(3) {
+      @include slot(1, 3);
+    }
+    &:nth-of-type(4) {
+      @include slot(1, 4);
+    }
+    &:nth-of-type(5) {
+      @include slot(1, 5);
+    }
+    &:nth-of-type(6) {
+      @include slot(1, 6);
+    }
+    &:nth-of-type(7) {
+      @include slot(1, 7);
+    }
+    &:nth-of-type(8) {
+      @include slot(1, 8);
+    }
+    &:nth-of-type(9) {
+      @include slot(1, 9);
+    }
+
+    &:nth-of-type(10) {
+      @include slot(2, 1);
+    }
+    &:nth-of-type(11) {
+      @include slot(2, 2);
+    }
+    &:nth-of-type(12) {
+      @include slot(2, 3);
+    }
+    &:nth-of-type(13) {
+      @include slot(2, 4);
+    }
+    &:nth-of-type(14) {
+      @include slot(2, 5);
+    }
+    &:nth-of-type(15) {
+      @include slot(2, 6);
+    }
+    &:nth-of-type(16) {
+      @include slot(2, 7);
+    }
+    &:nth-of-type(17) {
+      @include slot(2, 8);
+    }
+    &:nth-of-type(18) {
+      @include slot(2, 9);
+    }
+
+    &:nth-of-type(19) {
+      @include slot(3, 1);
+    }
+    &:nth-of-type(20) {
+      @include slot(3, 2);
+    }
+    &:nth-of-type(21) {
+      @include slot(3, 3);
+    }
+    &:nth-of-type(22) {
+      @include slot(3, 4);
+    }
+    &:nth-of-type(23) {
+      @include slot(3, 5);
+    }
+    &:nth-of-type(24) {
+      @include slot(3, 6);
+    }
+    &:nth-of-type(25) {
+      @include slot(3, 7);
+    }
+    &:nth-of-type(26) {
+      @include slot(3, 8);
+    }
+    &:nth-of-type(27) {
+      @include slot(3, 9);
+    }
+
+    &:hover {
+      background-color: rgba(255, 255, 255, 0.5);
+    }
   }
 }
